# labkit

./: .env.example  .gitignore  CONFIG_FIELDS.md  README.md  UNUSED_FILES.md  contrib_config_example.yaml  main.py  main_config_example.yaml  pyproject.toml
contrib/: config.py  incus-event-listener.py
contrib/openrc/: README.md  incuslab-event-listener  install_service.sh
contrib/plugins/: firstboot_handler.py  regen_ssh_host_keys.py  ssh_config.py
contrib/systemd/: incuslab-event-listener.service  incuslab.service
contrib/templates/: template_example.py
docs/: incus-setup.md  index.html
docs/commands/: app_config.md  down.md  init.md  list.md  new.md  node-add.md  requires-add.md  requires-rm.md  template.md  up.md
examples/: lab.yaml  separated_lab_example.yaml
labkit/: __init__.py  action_builder.py  action_executor.py  app_config.py  cli.py  config.py  config_manager.py  contrib_config.py  global_config.py  lab.py  models.py  node-add.md  node-rm.md  plugin_manager.py  utils.py
labkit/backends/: __init__.py  base.py  docker.py  incus.py  qemu.py
labkit/plugin_infra/: __init__.py  callable.py  fs_writer.py  interfaces.py  plugin_manager.py  timer.py
plugins/: README.md
plugins/examples/firstboot-handler-plugin/: plugin.py  plugin.yaml
plugins/examples/ssh-config-plugin/: plugin.py  plugin.yaml
plugins/firstboot-handler/: plugin.py  plugin.yaml
plugins/incus-event/: plugin.py
plugins/incus-event-listener-plugin/: plugin.py  plugin.yaml  process_events.py
plugins/ssh-config/: plugin.py  plugin.yaml
(+2 files in other folders)
